fixed gaps

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ body {
   padding-top: 3px;
   padding-left: 10px;
   font-size: 15px;
-  font-family: 'Public Sans', sans-serif;
+  font-family: "Public Sans", sans-serif;
 }
 
 /* >>>>>>>>>>>>>>>>> Header <<<<<<<<<<<<<<<<<< */
@@ -238,7 +238,7 @@ header h1 {
   padding-top: 2px;
   padding-left: 8px;
   font-size: 15px;
-  font-family: 'Public Sans', sans-serif;
+  font-family: "Public Sans", sans-serif;
 }
 
 header p {
